--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
     Firefox 35, Safari 8, iOS Safari 8.1, Android Browser 37, Android Chrome 40. Then I filtered again by features
     that were previously <em>unsupported</em> on IE8. The following list represents features we couldn't use before,
     but can use now<sup>2</sup>.  <p class="feature-comment">My personal comments are in yellow</p></p>
-  <small><sup>1</sup> Data from <a href="http://www.caniuse.com">caniuse.com</a></small><br>
+  <small><sup>1</sup> Data from <a href="http://www.caniuse.com">caniuse.com</a>. A site used to check the support for any modern web feature.</small><br>
   <small><sup>2</sup> Actually we could do a good amount of these with graceful fallbacks, polyfills, and the help of frameworks, but it's still exciting damnit!</small>
 
   <ul class="feature-list">
